<resources>
    <string name="app_name">Trelico</string>
    <string name="title_activity_main">Trelico</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="error">Ошибка</string>

    // TITLES FOR TOOLBAR
    <string name="steps_fragment">Главная</string>
    <string name="reg_fragment">Регистрация</string>
    <string name="login_fragment">Вход</string>
    <string name="donate_fragment">Премиум-функции</string>

    // LEFT NAVIGATION MENU
    <string name="nav_home_text">Домой</string>
    <string name="nav_donate_text">Донат</string>
    <string name="nav_exit_text">Выйти</string>
    <string name="nav_login_text">Войти</string>
    <string name="nav_more">Подробнее</string>
    <string name="exit_message">Вы успешно вышли</string>

    // [POPUP MENU]
    <string name="needed_to_internet">Для обновления базы требуется интернет соединение</string>
    <string name="your_level_is_minimal">Вы уже на минимальном уровне сложности</string>
    <string name="has_no_tasks_for_you">Нет доступных заданий! Подождите и обновите базу данных</string>


    // [FOR INTRODUCING FRAGMENT]
    <string name="intro_1_text">Добро пожаловать!</string>
    <string name="intro_2_text">Trelico позволит выйти тебе за рамки собственной жизни</string>
    <string name="intro_3_text">Простой интерфейс, задания с повышением уровня сложности, приятные бонусы</string>
    <string name="intro_4_text">Начни новую жизнь прямо сейчас!</string>
    <string name="intro_continue">Начать!</string>

    // FOR TASKS FRAGMENT
    <string name="first_step_text">Этап 1: Первые шаги</string>
    <string name="second_step_text">Этап 2: Расширение границ</string>

    // FOR FIRST OPENED DIALOG
    <string name="first_step_opening_title">\"Начало\"</string>
    <string name="first_step_opening_first_text">Все приложение делится на этапы и уровни. \n
        \n
    Они разделены по сложности и открываются по мере прохождения. \n
        \n
    Уровень \"Начало\" содержит базовые задания, которые под силу почти всем. </string>
    <string name="first_step_opening_second_text">Добро пожаловать в Trelico!</string>
    <string name="first_step_opening_button_text">Начать</string>

    // FOR TASK
    <string name="task_ready">Готово!</string>
    <string name="task_completed">Выполнено</string>
    <string name="task_number">Задание </string>
    <string name="task_confirm_title">Вы уверены, что выполнили задание полностью?</string>
    <string name="task_confirm_text">Вы должны понимать, что нет смысла обманывать приложение.
        \n В первую очередь это все необходимо Вам.
        \n Мы настоятельно не рекомендуем продолжать, если задание не было выполнено</string>
    <string name="task_confirm_button_text">Я выполнил!</string>

    //FOR LOADING DIALOG IN STEPS FRAGMENT
    <string name="steps_loading_title">Пожалуйста, подождите</string>
    <string name="steps_loading_text">Идёт скачивание ваших заданий....</string>
    <string name="steps_long_loading_second_text">Если скачивание идет долго- пожалуйста,
    перепроверьте ваше подключение к интернету.</string>

    // FOR STEPS FRAGMENT
    <string name="step_is_unavailable">Доступ к уровню закрыт! Повысьте свой уровень</string>

    // FOR TASKS FRAGMENT
    <string name="tasks_back_to_menu">В главное меню</string>

    // FOR DIALOGS AFTER COMPLETING LEVEL
    <string name="complete_level_1_title">Поздравляем!</string>
    <string name="complete_level_1_text">Вы успешно достигли второго уровня!
    \n Теперь для вас открыты все задания первого этапа.
    \n После достижения четвертого уровня, вам откроются все задания второго этапа.
    \n После прохождения второго этапа,
        чтобы открывать новые задания, вам будет необходимо купить подписку на приложение.</string>
    <string name="complete_level_1_button">Понял</string>

    <string name="complete_level_title">Поздравляем!</string>
    <string name="complete_level_text">Вы успешно повысили свой уровень!</string>
    <string name="complete_level_button">Я молодец</string>

    // REGISTRATION FRAGMENT
    <string name="reg_title_text">Регистрация</string>
    <string name="reg_email_title">E-mail адрес</string>
    <string name="reg_email_hint">Введите действующий адрес</string>
    <string name="reg_pass_hint">Не менее 6 символов</string>
    <string name="reg_confirm_pass_title">Пожалуйста, повторите пароль</string>
    <string name="reg_login_hint">Логин должен быть уникальным</string>
    <string name="reg_confirm_registration">Завершить регистрацию</string>
    <string name="reg_empty_values">Пожалуйста, заполните все поля!</string>
    <string name="reg_registration_title">Регистрация..</string>
    <string name="reg_registration_text1">Выполняется регистрация нового пользователя</string>
    <string name="reg_registration_text2">Если регистрация идет слишком долго- проверьте ваше соединение</string>
    <string name="reg_success_message">Остался последний шаг. Подтвердите почту!</string>
    <string name="reg_pass_confirm_false">Неверно подтвержден пароль</string>
    <string name="reg_short_pass">Слишком короткий пароль</string>
    <string name="reg_user_already_exists">Пользователь уже существует</string>

    // LOGIN FRAGMENT
    <string name="login_title_text">Вход</string>
    <string name="login_go_to_registration_text"><u>У меня нет аккаунта</u></string>
    <string name="login_join_text">Войти</string>
    <string name="login_success_message">Вы успешно вошли!</string>
    <string name="login_error_account_blocked">Ваш аккаунт заблокирован!</string>
    <string name="login_error_wrong_info">Неверный логин, или пароль</string>
    <string name="login_joining_title">Пожалуйста, подождите</string>
    <string name="login_joining_text1">Выполняется вход в систему</string>
    <string name="login_joining_text2">Если вход идет слишком долго- проверьте ваше соединение</string>
    <string name="login_empty_values">Пожалуйста, заполните все поля!</string>
    <string name="login_email_not_confirmed">Пожалуйста, подтвердите ваш почтовый адрес</string>

    // DONATE FRAGMENT
    <string name="donate_title">Премиум-функции</string>
    <string name="donate_block_1_title">Премиум аккаунт</string>
    <string name="donate_block_1_text">Месячная подписка. Открывает доступ к этапам выше второго</string>
    <string name="donate_other_functions">Остальные функции появятся позже! Следите за новостями</string>
    <string name="donate_buy_block_1_title">Покупка премиум аккаунта</string>
    <string name="donate_buy_block_1_text">Вы собираетесь купить премиум-аккаунт в нашем приложении.
    \n Данная функция будет действовать ровно месяц и откроет вам доступ ко всем этапам с заданиями.
        \n Кроме того, вы будете самыми первыми получать новые задания, приходящие с обновлениями
    \n Заранее благодарны за покупку.</string>
    <string name="donate_buy_block_1_button">Купить..</string>
    <string name="donate_first_register">Для доступа к платным функциям требуется вход в аккаунт</string>

</resources>
