<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/app_name">
        <menu>
            <group android:checkableBehavior="single"
                android:title = "@string/app_name"
                android:visible="true"
                android:menuCategory="secondary">

                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_menu_home"
                    android:title="@string/nav_home_text" />
                <item
                    android:id="@+id/nav_donate"
                    android:icon="@drawable/ic_menu_donate"
                    android:title="@string/nav_donate_text" />
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/ic_menu_login"
                    android:title="@string/nav_login_text" />
                <item
                    android:id="@+id/nav_exit"
                    android:icon="@drawable/ic_menu_exit"
                    android:title="@string/nav_exit_text" />
            </group>
        </menu>
    </item>


</menu>
