<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/reg_fragment_background"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/regEmailBlock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/white"
                    android:elevation="3dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/regEmailTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/reg_email_title" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/regEmailInput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/reg_email_hint">

                        <EditText
                            android:id="@+id/regEmailEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textWebEmailAddress" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/regConfirmRegistration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@+id/regPassBlock"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:text="@string/reg_confirm_registration" />

                <LinearLayout
                    android:id="@+id/regPassBlock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/regLoginBlock"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/white"
                    android:elevation="3dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/regPassTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/password" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/regPassInput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/reg_pass_hint"
                        app:passwordToggleEnabled="false">

                        <EditText
                            android:id="@+id/regPassEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="textPassword"
                            android:password="true"
                            android:saveEnabled="true" />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/regConfirmPassTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/reg_confirm_pass_title" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/regConfirmPassInput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/regConfirmPassEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="textPassword"
                            android:password="true"
                            android:saveEnabled="true" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/regLoginBlock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/regEmailBlock"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/white"
                    android:elevation="3dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/regLoginTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/login" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/regLoginInput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/reg_login_hint">

                        <EditText
                            android:id="@+id/regLoginEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint=" "
                            android:inputType="textPersonName" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>