<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/donate_fragment_background"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/donateBlock"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:background="@drawable/donate_block_background">

                <TextView
                    android:id="@+id/donateBlockDescription"
                    fontPath="fonts/Roboto-Thin.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/donateBlockTitle"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_toRightOf="@+id/donateBlockImage"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/donate_block_1_text" />

                <TextView
                    android:id="@+id/donateBlockTitle"
                    fontPath="fonts/Roboto-Medium.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/donateBlockImage"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/donate_block_1_title"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/donateBlockImage"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/donate_image_background_1"
                    android:padding="10dp"
                    app:srcCompat="@drawable/donate_image_1" />
            </RelativeLayout>

            <TextView
                android:id="@+id/donateOtherFunctions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donate_other_functions"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>